--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Âm nhạc cho mọi người</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="C:\Users\vutie\OneDrive\Desktop\BaiTapHTML\Spotify\css\main.css">
+	<link rel="stylesheet" type="text/css" href="https://github.com/vutiendung2205/dungvutien2201-project1/blob/master/css/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
