--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="header">
 		<div>
-			<img src="C:\Users\vutie\OneDrive\Desktop\BaiTapHTML\Spotify\img\logo.jpg">
+			<img src="https://github.com/vutiendung2205/dungvutien2201-project1/blob/master/img/logo.jpg">
 		</div>
 		<div id="menu_header">
 			<ul>
@@ -34,7 +34,7 @@
 	<div id="footer">
 		<table id="menu_footer">
 			<tr>
-				<th><a href="#"><img src="C:\Users\vutie\OneDrive\Desktop\BaiTapHTML\Spotify\img\logo.jpg"></a></th>
+				<th><a href="#"><img src="https://github.com/vutiendung2205/dungvutien2201-project1/blob/master/img/logo.jpg"></a></th>
 				<th>Công ty</th>
 				<th>Cộng đồng</th>
 				<th>Liên kết hữu ích</th>
